force-app/main/default/objects/IssueAdjustmentMetadata__mdt/IssueAdjustmentMetadata__mdt.object-meta.xml
<CustomObject>
    <label>IssueAdjustmentMetadata</label>
    <pluralLabel>IssueAdjustmentMetadatas</pluralLabel>
</CustomObject>