force-app/main/default/objects/IssueAdjustmentMetadata__mdt/fields/Adjustment_Code__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Code__c</fullName>
    <label>Adjustment Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>