force-app/main/default/objects/IssueAdjustmentMetadata__mdt/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <label>Adjustment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>