force-app/main/default/objects/IssueAdjustmentMetadata__mdt/fields/Case_Field__c.field-meta.xml
<CustomField>
    <fullName>Case_Field__c</fullName>
    <label>Case Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>